Bug 397202 Error accessing nsIAbDirectory.URI with OS X addressbook,r=philor,sr=bienvenu