mailnews/addrbook/src/nsAbOSXDirectory.h
@@ -141,7 +141,8 @@ public:
   NS_IMETHOD GetChildNodes(nsISimpleEnumerator **aNodes);
   NS_IMETHOD HasCard(nsIAbCard *aCard, PRBool *aHasCard);
   NS_IMETHOD HasDirectory(nsIAbDirectory *aDirectory, PRBool *aHasDirectory);
-  
+  NS_IMETHOD GetURI(nsACString &aURI);
+
   // nsIAbOSXDirectory
   nsresult AssertChildNodes();
   nsresult AssertDirectory(nsIAddrBookSession *aSession,
